# gdrive_download

./: .gitignore  README.md  pyproject.toml
gdrive/: __main__.py  auth.py  cli.py  constants.py  copier.py  downloader.py  lister.py  manifest.py  models.py  types.py
queries/: example_folder.json  example_folder_shallow.json  example_query.json
scripts/: filter_manifest.py
