[project]
name = "gdrive_download"
version = "0.1.0"
description = "Resumable, checksum-verified Google Drive downloader with manifest tracking."
authors = [{ name = "Jon Stroop", email = "jsgh@jopast.io" }]
dependencies = [
    "google-auth-oauthlib>=1.3.0",
    "google-api-python-client>=2.193.0",
    "tqdm>=4.67.3",
    "requests>=2.32.0",
]
requires-python = "==3.13.*"
readme = "README.md"
license = { text = "MIT" }


[dependency-groups]
dev = [
    "black>=25.0.0",
    "isort>=6.0.1",
    "mdformat>=0.7.22",
    "mdformat-gfm>=0.4.1",
    "types-tqdm>=4.67.3.20260303",
]

[tool.pdm]
distribution = false


[tool.black]
line-length = 100
preview = true
quiet = true
skip-magic-trailing-comma = true

[tool.isort]
profile = "black"
multi_line_output = 3
force_single_line = true
force_sort_within_sections = true
quiet = true
known_first_party = ["marc_pd_tool"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
import_heading_stdlib = "Standard library imports"
import_heading_thirdparty = "Third party imports"
import_heading_firstparty = "Local imports"
import_heading_localfolder = "Local folder imports"

[tool.mdformat]
number = true
wrap = 80
extensions = ["gfm"]

[tool.pdm.scripts]

gdrive = "python -m gdrive"
black = { cmd = "black ." }
isort = { cmd = "isort ." }
mdformat = { cmd = "mdformat ." }

fmt = { composite = ["black", "isort", "mdformat"] }
